# OSTEOFORENSE

./: .gitignore  Prueba_de_Codigo_osteo.ipynb  README.md  pyproject.toml
data/: README.md
data/Datos/: BASE_OSTEO_50.xlsx  Resultados_OsteoFacial.xlsx  dataset_con_matriz (2).pkl  dataset_con_matriz .pkl  datos.xlsx  tabla_con_imagenes (2).xlsx  tabla_con_imagenes.xlsx
docs/: Ideas_consultorio_osteo.docx  Proyecto_Osteo_Forense_EA.ipynb  README.md
notebooks/: Fase 1.py  Fase I.py  Prueba_1.py  README.md
src/: Código_Osteo.ipynb  README.md
